--- a/Festival-App/Festival-App/Base.lproj/Main.storyboard
+++ b/Festival-App/Festival-App/Base.lproj/Main.storyboard
@@ -1333,7 +1333,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#general" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kvF-kp-Vvi">
-                                                            <rect key="frame" x="228" y="9.5" width="72" height="25"/>
+                                                            <rect key="frame" x="283" y="9.5" width="72" height="25"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="18"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -2672,7 +2672,7 @@
                                                             </constraints>
                                                         </webView>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ultra Music 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="hva-Wk-zcC">
-                                                            <rect key="frame" x="170.5" y="5" width="189.5" height="26"/>
+                                                            <rect key="frame" x="170.5" y="20" width="189.5" height="26"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -2686,19 +2686,19 @@
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuK-hb-kzw">
                                                             <rect key="frame" x="10" y="98" width="355" height="71"/>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="12"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qXk-Z9-xVZ">
                                                             <rect key="frame" x="10" y="60" width="355" height="110"/>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="12"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25.04.2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Lz-FL-hHf">
-                                                            <rect key="frame" x="171.5" y="33" width="188.5" height="14"/>
+                                                            <rect key="frame" x="171.5" y="54" width="188.5" height="14"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="10"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -2715,14 +2715,13 @@
                                                         <constraint firstItem="FZ8-oR-WUv" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="BeG-cm-4jr"/>
                                                         <constraint firstItem="wuK-hb-kzw" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="DNx-JC-Ds0"/>
                                                         <constraint firstAttribute="trailing" secondItem="wuK-hb-kzw" secondAttribute="trailing" constant="10" id="EQR-fs-pkd"/>
-                                                        <constraint firstItem="wuK-hb-kzw" firstAttribute="top" secondItem="6Lz-FL-hHf" secondAttribute="bottom" constant="51" id="GC1-dN-iLu"/>
                                                         <constraint firstItem="FZ8-oR-WUv" firstAttribute="top" secondItem="LMv-LY-uO7" secondAttribute="top" constant="5" id="K8f-rH-Sfx"/>
                                                         <constraint firstItem="6Lz-FL-hHf" firstAttribute="trailing" secondItem="LMv-LY-uO7" secondAttribute="trailingMargin" id="KiY-r9-xf6"/>
-                                                        <constraint firstItem="hva-Wk-zcC" firstAttribute="top" secondItem="LMv-LY-uO7" secondAttribute="top" constant="5" id="LzP-tn-X9A"/>
+                                                        <constraint firstItem="hva-Wk-zcC" firstAttribute="top" secondItem="LMv-LY-uO7" secondAttribute="top" constant="20" id="LzP-tn-X9A"/>
                                                         <constraint firstAttribute="trailing" secondItem="qXk-Z9-xVZ" secondAttribute="trailing" constant="10" id="MiH-iX-FoD"/>
+                                                        <constraint firstItem="6Lz-FL-hHf" firstAttribute="top" secondItem="hva-Wk-zcC" secondAttribute="bottom" constant="8" id="Ncl-qN-vN2"/>
                                                         <constraint firstItem="wuK-hb-kzw" firstAttribute="top" secondItem="FZ8-oR-WUv" secondAttribute="bottom" constant="8" id="OAG-Wk-hIj"/>
                                                         <constraint firstAttribute="bottom" secondItem="FZ8-oR-WUv" secondAttribute="bottom" constant="90" id="TQv-sj-xk8"/>
-                                                        <constraint firstItem="6Lz-FL-hHf" firstAttribute="top" secondItem="hva-Wk-zcC" secondAttribute="bottom" constant="2" id="TVG-Ap-qYn"/>
                                                         <constraint firstItem="qXk-Z9-xVZ" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="Yeu-Gh-LQE"/>
                                                         <constraint firstItem="zOt-SO-tMm" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="Z9P-2e-PIT"/>
                                                         <constraint firstAttribute="trailing" secondItem="hva-Wk-zcC" secondAttribute="trailing" constant="15" id="Zss-xy-aVv"/>
