--- a/Festival-App/Festival-App/Base.lproj/Main.storyboard
+++ b/Festival-App/Festival-App/Base.lproj/Main.storyboard
@@ -2651,9 +2651,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fIb-m5-mK6" customClass="GradientView" customModule="Festival_App" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="77" width="375" height="590"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Tae-EA-sqC">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Tae-EA-sqC">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="590"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell" rowHeight="180" id="BvF-oZ-dTX" customClass="NewsCell" customModule="Festival_App" customModuleProvider="target">
@@ -2704,7 +2703,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25.04.2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zOt-SO-tMm">
-                                                            <rect key="frame" x="10" y="33" width="151" height="14"/>
+                                                            <rect key="frame" x="10" y="39" width="151" height="14"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="10"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -2726,7 +2725,7 @@
                                                         <constraint firstItem="zOt-SO-tMm" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="Z9P-2e-PIT"/>
                                                         <constraint firstAttribute="trailing" secondItem="hva-Wk-zcC" secondAttribute="trailing" constant="15" id="Zss-xy-aVv"/>
                                                         <constraint firstItem="hva-Wk-zcC" firstAttribute="leading" secondItem="FZ8-oR-WUv" secondAttribute="trailing" constant="10" id="bhW-QE-vCX"/>
-                                                        <constraint firstItem="zOt-SO-tMm" firstAttribute="top" secondItem="Emc-iA-KAp" secondAttribute="bottom" constant="2" id="cgp-Wc-2WN"/>
+                                                        <constraint firstItem="zOt-SO-tMm" firstAttribute="top" secondItem="Emc-iA-KAp" secondAttribute="bottom" constant="8" id="cgp-Wc-2WN"/>
                                                         <constraint firstAttribute="bottom" secondItem="wuK-hb-kzw" secondAttribute="bottom" constant="11" id="eiN-Mb-qjj"/>
                                                         <constraint firstItem="6Lz-FL-hHf" firstAttribute="leading" secondItem="FZ8-oR-WUv" secondAttribute="trailing" constant="11" id="jPu-nr-Fdz"/>
                                                         <constraint firstAttribute="trailing" secondItem="Emc-iA-KAp" secondAttribute="trailing" constant="10" id="ocu-lO-n0B"/>
@@ -2754,6 +2753,12 @@
                                         </connections>
                                     </tableView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Tae-EA-sqC" secondAttribute="bottom" id="YeD-ac-3zN"/>
+                                    <constraint firstItem="Tae-EA-sqC" firstAttribute="top" secondItem="fIb-m5-mK6" secondAttribute="top" id="iIC-tz-nCr"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tae-EA-sqC" secondAttribute="trailing" id="ieL-KN-FXn"/>
+                                    <constraint firstItem="Tae-EA-sqC" firstAttribute="leading" secondItem="fIb-m5-mK6" secondAttribute="leading" id="nZA-hI-0f1"/>
+                                </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="startX">
                                         <real key="value" value="0.5"/>
@@ -2800,7 +2805,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E2V-3s-d8y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1632.8" y="-1141.0794602698652"/>
+            <point key="canvasLocation" x="1631.25" y="-1141.9014084507041"/>
         </scene>
     </scenes>
     <resources>
